<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentRl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_very_large"
        android:src="@drawable/ic_person_black_24dp"
        android:contentDescription="@string/person" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_very_very_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.OnBoardingPageTitle"
        android:text="@string/sign_in_cc" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.OnBoardingPageDescription"
        android:text="@string/sign_in_description"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/descriptionTv"
        android:layout_above="@id/bottomFl"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/illustrationIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/google"
                android:tint="@color/gray2"
                android:contentDescription="@string/person"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/profileCv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/emailBtn"
        app:cardElevation="0dp"
        app:cardCornerRadius="18dp"
        android:stateListAnimator="@animator/avatar_anim"
        android:visibility="visible">

        <ImageView
            android:id="@+id/profileIv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/profile_pic" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/emailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottomFl"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:drawableEnd="@drawable/ic_cancel_black_24dp"
        android:drawablePadding="8dp"
        app:backgroundTint="@color/gray1"
        android:textColor="@color/green"
        android:stateListAnimator="@animator/email_button_elevation"
        android:textAppearance="@style/TextAppearance.EmailSmall"
        style="@style/Widget.HowMuch.Button"
        android:visibility="visible" />

    <FrameLayout
        android:id="@+id/bottomFl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_very_large">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/actionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            app:backgroundTint="@color/colorPrimary"
            android:stateListAnimator="@animator/button_elevation"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            style="@style/Widget.HowMuch.Button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/negActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            app:backgroundTint="@color/colorPrimary"
            android:stateListAnimator="@animator/button_elevation"
            android:textColor="@color/white"
            android:text="@string/proceed"
            style="@style/Widget.HowMuch.Button"
            android:visibility="gone"/>
    </FrameLayout>
</RelativeLayout>
